<resources>
    <string name="app_name">Ergot</string>
    <string name="bt_commander">Commander</string>
    <string name="bt_y_aller">Y Aller</string>
    <string name="bt_histo">Mes commandes</string>
    <string name="bt_voir_commande">Voir la commande</string>
    <string name="bt_payer">Payer</string>
    <string name="bt_envoyer">Envoyer</string>
    <string name="ws_load_message">Chargement en cours…</string>
    <string name="bt_cancel">Annuler</string>
    <string name="bt_no">non</string>
    <string name="bt_cancel_order">Annuler la commande</string>
    <string name="bt_gestion_commande">Gestion des commandes</string>
    <string name="bt_fermer">Fermer</string>

    <string name="bt_actualiser">Actualiser</string>
    <string name="title_activity_product_list">ProductListActivity</string>
    <string name="commande_pour">Commande pour</string>
    <string name="bt_modifier">Modifier</string>
    <string name="remarques">Remarques</string>
    <string name="au_plus_tot">Au plus tôt</string>
    <string name="coordonees">Coordonnées* : </string>
    <string name="email">E-mail</string>
    <string name="phone">Téléphone</string>
    <string name="nophone_or_email">Veuillez saisir un téléphone ou un e-mail</string>
    <string name="gestion_command">Gestion commandes</string>

    <!-- Panname="" Activity -->
    <string name="order_sucess">Votre commande a été envoyée</string>
    <string name="panier_title">Ma commande</string>
    <string name="tv_number_permission_exp">Pour pré remplir le numéro de téléphone</string>
    <string name="bt_annuler_com">Annuler la\ncommande</string>
    <string name="tv_command_canceled">La commande a été annulée</string>
    <string name="cancel_reason_lib">Raison de l\'annulation :</string>


    <!-- GestionCommandeActivity -->
    <string name="gestion_commande_title">Gestion des commandes</string>
    <string name="tv_commande_lib">Commande : </string>
    <string name="rupture">Rupture</string>

    <!-- History -->
    <string name="time_expected">Heure estimée : </string>
    <string name="statut">Statut : </string>
    <string name="bt_detail">Détail</string>
    <string name="bt_masque">Masquer</string>
    <string name="bt_valider_com">Valider la\ncommande</string>
    <string name="bt_refuser">Refuser</string>
    <string name="dialog_supp_commande">Etes vous sur de vouloir annuler la commande ?</string>
    <string name="history_title">Mes Commandes</string>
    <string name="no_commande">Aucune commande disponible</string>
    <string name="client">Client : </string>
    <string name="telephone">Téléphone : </string>

    <string name="commande_sans_probleme">Reussie(s) :</string>
    <string name="commande_annule">Annulée(s) :</string>
    <string name="commande_prepare_annule">Annulée après préparation : </string>
    <string name="commande_prepare_non_chercher">Jamais venu chercher :</string>


    <!--Statut commande-->
    <string name="status_attente">Envoyé</string>
    <string name="status_aattente_admin">Attente</string>
    <string name="status_Accepte">Accepté</string>
    <string name="status_ready">Prêt</string>
    <string name="status_livre">Livré</string>
    <string name="status_cancel">Annulé</string>


    <!--Statut annulation-->
    <string name="status_ann_admin">Admin</string>
    <string name="status_ann_client">Client</string>
    <string name="status_ann_client_cmd_ready">Client, commande prête</string>
    <string name="status_ann_client_never_come">Client jamais venu</string>

    <!-- Erreur -->
    <string name="generic_error">Une erreur est survenue</string>
    <string name="server_error">Une erreur avec le serveur s\'est produite, veuillez réessayer ulterieurement.</string>
    <string name="no_internet_error">Vous n\'êtes pas connecté à internet</string>
    <string name="bad_internet_connexion_error">Le débit de votre connexion internet est insuffisant. Veuillez rééssayer</string>
    <string name="identify">S\'identifier</string>
    <string name="commande_no_identify">Les commandes non identifiées seront préparées à votre arrivée</string>
    <string name="identification_impossible">Identification impossible avec votre appareil</string>
    <string name="reqEnCours">Une instruction est déjà en attente</string>
    <string name="email_title">email :</string>
    <string name="comande_ready_in">La commande sera prête dans environ :</string>
    <string name="no_produit_to_send">Votre commande ne contient aucun produit</string>
    <string name="product_disable">Produit momentanément indisponible</string>


</resources>
