<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="ergot.anthony.com.ergot.controler.historique.HstoriqueCommandActivity">


    <TextView
        android:id="@+id/tv_wait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/load_shadow_color"
        android:gravity="center"
        android:padding="@dimen/margin_10"
        android:text="@string/ws_load_message"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_16"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/ll_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/error_shadow_color"
        android:orientation="horizontal"
        android:padding="@dimen/margin_10">

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/generic_error"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_14"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/bt_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_actualiser"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_connected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/email_title"/>


        <TextView
            android:id="@+id/tv_email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="bob@bob.fr"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_16"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/iv_logout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_logout"/>
    </LinearLayout>

    <Button
        android:id="@+id/btIdentifier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:text="@string/identify"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:gravity="center_vertical"
        android:text="@string/commande_no_identify"
        android:textColor="@color/grey_subtitle"
        android:textSize="@dimen/font_12"
        android:textStyle="italic"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_weight="1"
        android:visibility="visible"
        tools:listitem="@layout/row_history"/>

    <TextView
        android:id="@+id/tv_no_commande"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/no_commande"
        android:textSize="@dimen/font_25"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_10"

        android:background="@color/foot_shadow_color"/>

    <include
        android:id="@id/foot"
        layout="@layout/foot_commande"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>
