<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_5"
    app:cardBackgroundColor="@color/cardview_bg"
    app:cardCornerRadius="@dimen/margin_5"
    >

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical"
        android:padding="@dimen/margin_10">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="12/05/2018 20h33"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_16"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4.95 €"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_16"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:text="@string/client"
                android:textColor="@color/grey_subtitle"
                android:textSize="@dimen/font_14"/>

            <TextView
                android:id="@+id/tv_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:text="bob@bob.fr"
                android:textColor="@color/grey_subtitle"
                android:textSize="@dimen/font_14"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/iv_warning"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:src="@mipmap/ic_warning"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:text="@string/telephone"
                android:textColor="@color/grey_subtitle"
                android:textSize="@dimen/font_14"/>

            <TextView
                android:id="@+id/tv_telephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:text="06 06 06 06"
                android:textColor="@color/grey_subtitle"
                android:textSize="@dimen/font_14"
                android:textStyle="bold"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:text="@string/time_expected"
                android:textColor="@color/grey_subtitle"
                android:textSize="@dimen/font_14"/>

            <TextView
                android:id="@+id/tv_time_expected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:text="20h50"
                android:textColor="@color/grey_subtitle"
                android:textSize="@dimen/font_14"
                android:textStyle="bold"/>
        </LinearLayout>


        <TextView
            android:id="@+id/tv_statut_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/statut"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_14"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/ll_expected_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_accept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/status_Accepté"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:textStyle="italic"/>

            <Button
                android:id="@+id/bt_ready"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/status_ready"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:textStyle="italic"/>

            <Button
                android:id="@+id/bt_delivery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/status_livre"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:textStyle="italic"/>

            <Button
                android:id="@+id/bt_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/status_cancel"
                android:textSize="12sp"
                android:textStyle="italic"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bt_show_detail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/margin_10"
                android:paddingRight="@dimen/margin_10"
                android:text="@string/bt_detail"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

            <view
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="invisible"/>

        </LinearLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>