<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/margin_5">


    <ImageView
        android:id="@+id/iv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:src="@mipmap/ic_launcher"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_10"
                android:gravity="center_vertical"
                android:text="@string/tv_commande_lib"
                android:textColor="@color/grey_subtitle"
                android:textSize="@dimen/font_20"/>

            <TextView
                android:id="@+id/tv_num_commande"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:gravity="center"
                android:text="21144"
                android:textColor="@color/grey_subtitle"
                android:textSize="@dimen/font_30"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_expected_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:text="@string/time_expected"
                android:textColor="@color/grey_subtitle"
                android:textSize="@dimen/font_14"/>

            <TextView
                android:id="@+id/tv_time_expected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:text="20h50"
                android:textColor="@color/grey_subtitle"
                android:textSize="@dimen/font_14"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2">

            <TextView
                android:id="@+id/tv_statut_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:text="@string/statut"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_14"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/bt_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:text="@string/status_attente"
                android:textAllCaps="false"
                android:textColor="@color/load_shadow_color"
                android:textSize="@dimen/font_14"
                android:textStyle="bold"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>